# nonebot-plugin-weiweibot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
nonebot_plugin_weiweibot/: __init__.py  config.py  data.py  image_r3cognition.py  pyvenv.cfg  simple_search.py  tf_idf.py
plug/nonebot-plugin-weiweibot/: __init__.py  config.py  search.py  store.py  utils.py
