[project]
name = "nonebot-plugin-weiweibot"
version = "0.1.9"
description = "a simple weiwei bot"
authors = [
    {name = "J4ckacc", email = "aaaskyfullofstars@gmail.com"}
]
dependencies = ["nonebot2>=2.2.0", "nonebot-adapter-onebot>=2.1.3", "aiohttp>=3.8.5", "cnocr>=2.3.0.3", "opencv-python>=4.10.0.84", "numpy>=1.23.5", "pydantic>=2.6.4"]
requires-python = ">=3.9, <4.0"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[project.urls]
homepage = "https://github.com/SwedishDoveCooker/nonebot-plugin-weiweibot"
repository = "https://github.com/SwedishDoveCooker/nonebot-plugin-weiweibot"

[tool.nonebot]
adapters = [
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}
]
plugins = [
    "nonebot-plugin-weiweibot"
]
